fix header on mobile and increase code font-size

--- a/static/style/style.styl
+++ b/static/style/style.styl
@@ -25,6 +25,9 @@ h1
   padding-top 0
   margin-top 0
 
+  +mobile()
+    font-size 16px
+
 ul,li
   padding 0
   margin 0
@@ -114,6 +117,9 @@ ul,li
 
       .post-date
         font-weight bold
+
+        +mobile()
+          font-size 12px
 
     .post-content
       width content-width
@@ -286,3 +292,6 @@ ul,li
   display block
   margin-top separator
   margin-bottom separator
+
+.hljs
+  font-size 17px
